--- a/day 10/index.html
+++ b/day 10/index.html
@@ -16,6 +16,10 @@
                 class="imgStyle"
                 alt="logo" src="https://images.indianexpress.com/2021/01/myntra.png"/>
             </div>
+            <div id="overviewTitle">
+                <p>Men T-Shirt</p>
+                <p>123456 Items</p>
+              </div>
             <div class="collection">
                 <div class="men"><a href="/">MEN</a></div>
                 <div class="women"><a href="/">WOMEN</a></div>
