--- a/days4.html
+++ b/days4.html
@@ -9,12 +9,12 @@
       <input type="password" /><br />
       <input type="submit" /><br />
     </form> <br/>
-  <img src="../htmlcss/assets/awdiz.in.jpeg" />
+  <img src="./assets/animal.webp" />
   <video controls>
-    <source src="../htmlcss/assets/awdizin.mp4" />
+    <source src="./assets/natural video.mp4" />
   </video>
   <audio controls>
-    <source src="../htmlcss/assets/Rain(chosic.com).mp3" />
+    <source src="./assets/Dagored - Desert West (freetouse.com).mp3" />
   </audio>
   </body>
 </html>
